--- a/oo_ProjectConference/index.html
+++ b/oo_ProjectConference/index.html
@@ -45,21 +45,100 @@
     </section>
 
     <section class="panel-speakers">
-        <div class="about-speakers">
-            <h2 class="speaker-tittle">Palestrantes</h2>
-            <h2 class="speaker-subtittle">Aprenda com palestrantes que são referência no mercado</h2>
+
+        <div class="container">
+
+            <div class="about-speakers">
+                <h2 class="speaker-tittle">Palestrantes</h2>
+                <h2 class="speaker-subtittle">Aprenda com palestrantes que são referência no mercado</h2>
+            </div>
+
+            <ul class="speakers">
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image"src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img  class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img  class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+
+                <li class="speaker">
+                    <figure class="speaker-portrait">
+                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
+                        <figcaption class="speaker-name">Boni Bo</figcaption>
+                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
+                    </figure>
+                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
+                </li>
+            </ul>
+
         </div>
 
-        <ul class="speakers">
-            <li class="speaker">
-                <figure class="speaker-portrait">
-                    <img src="" alt="">
-                    <figcaption class="speaker-name">Boni Bo</figcaption>
-                    <p class="speaker-bio">Desenvolvedor das galáxias</p>
-                </figure>
-                <p class="speaker-speach">To be or not to mean</p>
-            </li>
-        </ul>
+       
     </section>
 
 
