--- a/oo_ProjectConference/index.html
+++ b/oo_ProjectConference/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/speakers.css">
+    <link rel="stylesheet" href="css/form.css">
 </head>
 <body>
     <header class="header">
@@ -54,15 +55,6 @@
             </div>
 
             <ul class="speakers">
-                <li class="speaker">
-                    <figure class="speaker-portrait">
-                        <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
-                        <figcaption class="speaker-name">Boni Bo</figcaption>
-                        <p class="speaker-bio">Desenvolvedor das galáxias</p>
-                    </figure>
-                    <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
-                </li>
-
                 <li class="speaker">
                     <figure class="speaker-portrait">
                         <img class="speaker-image" src="img/palestrantes/placeholder.jpeg" alt="">
@@ -135,12 +127,28 @@
                     <p class="speaker-speach">To be or not to mean. That's all, folks.</p>
                 </li>
             </ul>
-
-        </div>
-
-       
+        </div>    
     </section>
 
+    <section class="panel-form">
+        <div class="container">
+            <h2 class="panel-title">Seus dados</h2>          
+            <form action="">
+                <div class="field">
+                    <label class="field-label" for="">Nome</label>
+                    <input class="field-input" type="text">
+                </div>
+
+                <div class="field">
+                    <label class="field-label" for="">E-mail</label>
+                    <input class="field-input" type="email">
+                </div>
+                <div class="button-place">
+                    <button class="button">Realizar inscrição</button> 
+                </div>             
+            </form>
+        </div>
+    </section>
 
 </body>
 </html>
